Fix sass formatting and image-container margin on small screens.

--- a/assets/css/sass/_media.scss
+++ b/assets/css/sass/_media.scss
@@ -18,21 +18,22 @@
     }
   }
 
-.recent-box {
-  .recent-list {
-    .recent-item {
-      position: relative;
-      display: inline-block;
-      width: 49%;
-      height: 150px;
-      margin-left: 0.5%;
-      margin-bottom: 0.5%;
-      span {
-        position: absolute;
-        font-size: 12px;
-        left: 2.5%;
-        bottom: 10%;
-        color: $white;
+  .recent-box {
+    .recent-list {
+      .recent-item {
+        position: relative;
+        display: inline-block;
+        width: 49%;
+        height: 150px;
+        margin-left: 0.5%;
+        margin-bottom: 0.5%;
+        span {
+          position: absolute;
+          font-size: 12px;
+          left: 2.5%;
+          bottom: 10%;
+          color: $white;
+        }
       }
     }
   }
@@ -138,6 +139,9 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  .image-container {
+    margin: 0;
+  }
   .author-img {
     height: 100px;
     width: 100px;
